--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
                     <button class="specialOffers_conteiner--box--button">Buy</button>
                 </div>
             </div>
-
         </section>
         <section class="pinck">
             <section class="pinck1">
@@ -98,8 +97,126 @@
                 </div>
             </section>
         </section>
-
+        <section class="impuls">
+            <table class="impuls_table">
+                <tr class="impuls_table--tr">
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                </tr>
+                <tr class="impuls_table--tr">
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                </tr>
+                <tr class="impuls_table--tr">
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                    <td class="impuls_table--tr--td"><img src="./img/impuls.png" alt="photo"></td>
+                </tr>
+            </table>
+        </section>
+        <section class="specialOffers">
+            <h3 class="specialOffers_title">Have you recently viewed</h3>
+            <div class="specialOffers_conteiner">
+                <div class="specialOffers_conteiner--box">
+                    <img class="specialOffers_conteiner--box--photo" src="./img/chair.jpg" alt="chair">
+                    <p class="specialOffers_conteiner--box--text">Hairdressing chair "Norm" hydraulic</p>
+                    <h3 class="specialOffers_conteiner--box--price">$300 </h3>
+                    <button class="specialOffers_conteiner--box--button">Buy</button>
+                </div>
+                <div class="specialOffers_conteiner--box">
+                    <img class="specialOffers_conteiner--box--photo" src="./img/chair.jpg" alt="chair">
+                    <p class="specialOffers_conteiner--box--text">Hairdressing chair "Norm" hydraulic</p>
+                    <h3 class="specialOffers_conteiner--box--price">$300 </h3>
+                    <button class="specialOffers_conteiner--box--button">Buy</button>
+                </div>
+                <div class="specialOffers_conteiner--box">
+                    <img class="specialOffers_conteiner--box--photo" src="./img/chair.jpg" alt="chair">
+                    <p class="specialOffers_conteiner--box--text">Hairdressing chair "Norm" hydraulic</p>
+                    <h3 class="specialOffers_conteiner--box--price">$300 </h3>
+                    <button class="specialOffers_conteiner--box--button">Buy</button>
+                </div>
+                <div class="specialOffers_conteiner--box">
+                    <img class="specialOffers_conteiner--box--photo" src="./img/chair.jpg" alt="chair">
+                    <p class="specialOffers_conteiner--box--text">Hairdressing chair "Norm" hydraulic</p>
+                    <h3 class="specialOffers_conteiner--box--price">$300 </h3>
+                    <button class="specialOffers_conteiner--box--button">Buy</button>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <section class="popular">
+            <div class="popular_box">
+                <div class="popular_box--top">
+                    <h3 class="popular_box--top--title">Popular categories</h3>
+                </div>
+                <ul class="popular_box--list">
+                    <li><a class="popular_box--list--li" href="#">Нozzles</a></li>
+                    <li><a class="popular_box--list--li" href="#">Tools</a></li>
+                    <li><a class="popular_box--list--li" href="#">Gel polishes</a></li>
+                    <li><a class="popular_box--list--li" href="#">Building</a></li>
+                    <li><a class="popular_box--list--li" href="#">Building</a></li>
+                    <li><a class="popular_box--list--li" href="#">Equipment</a></li>
+                </ul>
+            </div>
+            <div class="popular_box">
+                <div class="popular_box--top">
+                    <h3 class="popular_box--top--title">Popular categories</h3>
+                </div>
+                <ul class="popular_box--list">
+                    <li><a class="popular_box--list--li" href="#">Нozzles</a></li>
+                    <li><a class="popular_box--list--li" href="#">Tools</a></li>
+                    <li><a class="popular_box--list--li" href="#">Gel polishes</a></li>
+                    <li><a class="popular_box--list--li" href="#">Building</a></li>
+                    <li><a class="popular_box--list--li" href="#">Building</a></li>
+                    <li><a class="popular_box--list--li" href="#">Equipment</a></li>
+                </ul>
+            </div>
+            <div class="popular_box">
+                <div class="popular_box--top">
+                    <h3 class="popular_box--top--title">Popular categories</h3>
+                </div>
+                <ul class="popular_box--list">
+                    <li><a class="popular_box--list--li" href="#">Нozzles</a></li>
+                    <li><a class="popular_box--list--li" href="#">Tools</a></li>
+                    <li><a class="popular_box--list--li" href="#">Gel polishes</a></li>
+                    <li><a class="popular_box--list--li" href="#">Building</a></li>
+                    <li><a class="popular_box--list--li" href="#">Building</a></li>
+                    <li><a class="popular_box--list--li" href="#">Equipment</a></li>
+                </ul>
+            </div>
+            <div class="popular_box">
+                <div class="popular_box--top">
+                    <h3 class="popular_box--top--title">Popular categories</h3>
+                </div>
+                <ul class="popular_box--list">
+                    <li><a class="popular_box--list--li" href="#">Нozzles</a></li>
+                    <li><a class="popular_box--list--li" href="#">Tools</a></li>
+                    <li><a class="popular_box--list--li" href="#">Gel polishes</a></li>
+                    <li><a class="popular_box--list--li" href="#">Building</a></li>
+                    <li><a class="popular_box--list--li" href="#">Building</a></li>
+                    <li><a class="popular_box--list--li" href="#">Equipment</a></li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div>
+                <div>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+                <div>
+
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
